# cameo

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  build_dev.ps1  build_dev.sh  build_release.ps1  build_release.sh  eslint.config.js  index.html  package.json  pnpm-lock.yaml  publish_ffmpeg.sh  publish_release.ps1  publish_release.sh  setup.ps1  setup.sh  vite.config.ts
.github/workflows/: windows-build.yml
specs/: ARCHITECTURE.md  CODEX_PROTOCOL.md  DESIGN.md
specs/tech_docs/: release_and_downloads.md  tech_design_0.0.1.md
src/: App.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/skills/video-edit/: SKILL.md
src-tauri/src/: assets.rs  board.rs  codex.rs  commands.rs  config.rs  device.rs  lib.rs  logging.rs  main.rs  model.rs  net.rs  paths.rs  process.rs  prompt.rs  protocol.rs  proxy.rs  runtime.rs  session.rs  skills.rs  storage.rs  tray.rs  updater.rs  workspace.rs
src-tauri/src/tools/: ffmpeg.rs  mod.rs
src-tauri/tests/: codex_smoke.rs
src/canvas/: CameoCanvas.tsx  VideoOverlay.tsx  scene.ts
src/components/: AssistantMarkdown.tsx  CanvasContextMenu.tsx  ChatInlineImage.tsx  ChatInlineVideo.tsx  ChatPanel.tsx  CompareModal.tsx  Composer.tsx  CropOverlay.tsx  GenSettingsMenu.tsx  SelectionBar.tsx  SettingsModal.tsx  Sidebar.tsx  StreamingStatus.tsx  ToastHost.tsx  UpdateIndicator.tsx  VersionSection.tsx
src/components/gallery/: GalleryButton.tsx  GalleryCard.tsx  GalleryDetail.tsx  GalleryOverlay.tsx
src/hooks/: useUpdater.ts
src/i18n/: locale.ts  messages.ts
src/lib/: asset-url.ts  cameo-url.test.ts  cameo-url.ts  chatImageDetect.ts  crop.ts  imageActions.ts  ipc.ts  media.ts  notify.ts  overlay.ts  presets.ts  streamingPhrases.ts  useCodexEvents.ts  useFileImport.ts  watchdog.ts
src/store/: board.ts  chat.ts  clipboard.ts  composer.ts  genSettings.ts  history.ts  settings.ts  toast.ts  ui.ts  updater.ts  videoPlayback.ts  workspace.ts
src/styles/: app.css
(+4 files in other folders)
